--- a/src/station6.html
+++ b/src/station6.html
@@ -1,1 +1,40 @@
 <!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+    <meta property="og:url" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:image" content="" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@yt_ninja08" />
+
+
+    <link rel="stylesheet" href="./assets/css/station4.css" type="text/css">
+    <title>Station 5</title>
+  </head>
+  <body>
+    <header></header>
+    
+    <div class="body">
+        <main>
+            <h1>カードリスト</h1>
+            <div class="card">
+                <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="カードの画像" />
+                <p class="card__title">タイトル</p>
+                <p class="card__description">Joseph Solomon</p>
+                <p class="card__description">420 mil visualizações • há 1 ano</p>
+            </div>
+        </main>
+    </div>
+
+
+    <footer></footer>
+  </body>
+</html>
