--- a/src/station6.html
+++ b/src/station6.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
-    <meta property="og:url" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:url" content="file:///Users/kawakamiyuudai/Documents/work_space/study/techtrain/html-stations/src/station6.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Station 6" />
+    <meta property="og:description" content="Tech Trailの練習" />
+    <meta property="og:site_name" content="練習ページ" />
+    <meta property="og:image" content="./assets/css/station4.css" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yt_ninja08" />
 
 
     <link rel="stylesheet" href="./assets/css/station4.css" type="text/css">
-    <title>Station 5</title>
+    <title>Station 6</title>
   </head>
   <body>
     <header></header>
