--- a/src/station7.html
+++ b/src/station7.html
@@ -4,35 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/station7.css" type="text/css" />
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+    <meta property="og:url" content="file:///Users/kawakamiyuudai/Documents/work_space/study/techtrain/html-stations/src/station6.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Station 7" />
+    <meta property="og:description" content="Tech Trailの練習" />
+    <meta property="og:site_name" content="練習ページ" />
+    <meta property="og:image" content="./assets/css/station7.css" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@yt_ninja08" />
+
+
+    <link rel="stylesheet" href="./assets/css/station7.css" type="text/css">
     <title>Station 7</title>
   </head>
   <body>
-    <div class="card-container">
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
+    <header></header>
+    
+    <div class="body">
+        <main>
+            <h1>カードリスト</h1>
+            <div class="card">
+                <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="カードの画像" />
+                <p class="card__title">タイトル</p>
+                <p class="card__description">Joseph Solomon</p>
+                <p class="card__description">420 mil visualizações • há 1 ano</p>
+            </div>
+            <div class="card">
+              <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="カードの画像" />
+              <p class="card__title">タイトル</p>
+              <p class="card__description">Joseph Solomon</p>
+              <p class="card__description">420 mil visualizações • há 1 ano</p>
+            </div>
+        </main>
     </div>
+
+
+    <footer></footer>
   </body>
 </html>
