--- a/src/station8.html
+++ b/src/station8.html
@@ -23,8 +23,8 @@
     <header></header>
     
     <div class="body">
-        <main>
-            <h1>カードリスト</h1>
+        <h1>カードリスト</h1>
+        <div class="container">
             <div class="card">
                 <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="カードの画像" />
                 <p class="card__title">タイトル</p>
@@ -32,12 +32,12 @@
                 <p class="card__description">420 mil visualizações • há 1 ano</p>
             </div>
             <div class="card">
-              <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="カードの画像" />
-              <p class="card__title">タイトル</p>
-              <p class="card__description">Joseph Solomon</p>
-              <p class="card__description">420 mil visualizações • há 1 ano</p>
+                <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="カードの画像" />
+                <p class="card__title">タイトル</p>
+                <p class="card__description">Joseph Solomon</p>
+                <p class="card__description">420 mil visualizações • há 1 ano</p>
             </div>
-        </main>
+        </div>
     </div>
 
 
